[metadata]
name = pyapr
author = Joel Jonsson, Bevan Cheeseman
author_email = jonsson@mpi-cbg.de
description = Python wrappers for LibAPR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdaptiveParticles/PyLibAPR
license = Apache-2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python ::
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    scikit-image
    PyQt5
    pyqtgraph
    tifffile
    matplotlib
