[metadata]
name = pyapr
author = Joel Jonsson, Bevan Cheeseman
author_email = jonsson@mpi-cbg.de
description = Content-adaptive image processing using the Adaptive Particle Representation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdaptiveParticles/pyapr
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    scikit-image
    PyQt5
    pyqtgraph
    tifffile
    matplotlib
